Added personal data management pages

--- a/JDC.DependencyInjection/JDC.DependencyInjection.csproj
+++ b/JDC.DependencyInjection/JDC.DependencyInjection.csproj
@@ -17,6 +17,7 @@
         </PackageReference>
     </ItemGroup>
     <ItemGroup>
+        <ProjectReference Include="..\JDC.BusinessLogic\JDC.BusinessLogic.csproj" />
         <ProjectReference Include="..\JDC.DataAccess\JDC.DataAccess.csproj" />
     </ItemGroup>
 </Project>
