--- a/JDC.BusinessLogic/JDC.BusinessLogic.csproj
+++ b/JDC.BusinessLogic/JDC.BusinessLogic.csproj
@@ -13,4 +13,8 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\JDC.Common\JDC.Common.csproj" />
+      <ProjectReference Include="..\JDC.DataAccess\JDC.DataAccess.csproj" />
+    </ItemGroup>
 </Project>
