--- a/JDC.DataAccess/JDC.DataAccess.csproj
+++ b/JDC.DataAccess/JDC.DataAccess.csproj
@@ -16,4 +16,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\JDC.Common\JDC.Common.csproj" />
+    </ItemGroup>
 </Project>
