--- a/JDC/JDC.csproj
+++ b/JDC/JDC.csproj
@@ -9,14 +9,13 @@
         <AdditionalFiles Include="..\stylecop.json" Link="Properties\stylecop.json" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.13" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.13" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.13">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\JDC.DependencyInjection\JDC.DependencyInjection.csproj" />
