Updated EmailSender service

--- a/JDC/appsettings.json
+++ b/JDC/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "SmtpClient": {
+    "Email": "testemail@gmail.com",
+    "Password": "testpasssword",
+    "Name":  "Администрация сайта JDC",
+    "Host": "smtp.gmail.com",
+    "Port": 465
+  },
   "AllowedHosts": "*"
 }
