--- a/JDC.BusinessLogic/JDC.BusinessLogic.csproj
+++ b/JDC.BusinessLogic/JDC.BusinessLogic.csproj
@@ -8,6 +8,8 @@
         <AdditionalFiles Include="..\stylecop.json" Link="Properties\stylecop.json" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="MailKit" Version="3.0.0" />
+        <PackageReference Include="MimeKit" Version="3.0.0" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
