--- a/JDC.BusinessLogic/JDC.BusinessLogic.csproj
+++ b/JDC.BusinessLogic/JDC.BusinessLogic.csproj
@@ -8,7 +8,9 @@
         <AdditionalFiles Include="..\stylecop.json" Link="Properties\stylecop.json" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
         <PackageReference Include="MailKit" Version="3.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.13" />
         <PackageReference Include="MimeKit" Version="3.0.0" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
             <PrivateAssets>all</PrivateAssets>
