--- a/JDC.Tests/JDC.Tests.csproj
+++ b/JDC.Tests/JDC.Tests.csproj
@@ -18,4 +18,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\JDC.BusinessLogic\JDC.BusinessLogic.csproj" />
+    </ItemGroup>
 </Project>
