--- a/JDC.Common/JDC.Common.csproj
+++ b/JDC.Common/JDC.Common.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.13" />
+        <PackageReference Include="NickBuhro.Translit" Version="1.4.5" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
